# seoul-walk-platform

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: ⚙--setting--개발-환경-세팅-이슈-템플릿.md  ✅--test--테스트-관련-이슈-템플릿.md  ✨--feat--기능-개발-이슈-템플릿.md  🌏--deploy--배포-관련-이슈-템플릿.md  🐞--bugfix--버그-수정-이슈-템플릿.md  💻--crossbrowsing--브라우저-호환성-이슈-템플릿.md  📃--docs--문서-작성-및-수정-이슈-템플릿.md  📬--api--서버-api-통신-이슈-템플릿.md  🔨--refactor--코드-리팩토링-이슈-템플릿.md  🥰--accessibility--웹접근성-이슈-템플릿.md
.github/workflows/: label-sync.yml
qa/: test_cases.py
src/: main.py
src/algorithm/: route.py
src/api/: kakao_api.py  weather.py  weather_router.py
src/client/: map_view.py  weather.py  weather_client.py
src/data/: osm_parser.py
src/data/collectors/: base_network.py  layer_collector.py
src/database/: postgresql.py  valkey.py
src/db/: connection.py  models.py
src/entity/: base.py  chat_session.py  poi_network.py  route.py  user_query.py  walk_network.py
src/map/: layer.py
src/nlp/: intent.py
src/prompt/: extraction.yaml  map_selection.yaml  weight_assign.yaml
src/repository/: graph_repository.py
src/schema/: prewalk_schema.py
src/service/: map_service.py  path_finder.py  prewalk_orchestrator.py  route_service.py  weather_service.py
src/service/node/: map_selector.py  weight_assigner.py
src/service/weather/: weather_checker.py
