[tool.poetry]
name = "seoul-walk-platform"
package-mode = false 
version = "0.1.0"
description = "서울시 산책 경로 추천 서비스"
authors = ["Seoul Walk Team"]

[tool.poetry.dependencies]
python = "^3.11"
# --- UI & Map ---
streamlit = "^1.40.0"
pydeck = "^0.9.0"
folium = "^0.17.0"
streamlit-folium = "^0.21.0"

# --- Data & Geometry ---
pandas = "^2.2.0"
geopandas = "^0.14.0"
shapely = "^2.0.0"
osmnx = "^1.9.1"

# --- API & Backend Core ---
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.0.0"

# --- Database & Cache ---
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"

# --- Client & AI ---
requests = "^2.32.0"
httpx = "^0.27.0"
openai = "^1.30.0"
python-dotenv = "^1.0.1"
geoalchemy2 = "^0.18.4"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"